// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider borderColor prop sets borderColor 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  margin-left: 0px;
  margin-right: 0px;
  border-color: #007aff;
}

<hr
  className="c0"
/>
`;

exports[`Divider m prop sets margin 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  margin: 8px;
  margin-left: 0px;
  margin-right: 0px;
  border-color: #c0cad5;
}

<hr
  className="c0"
/>
`;

exports[`Divider renders 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  margin-left: 0px;
  margin-right: 0px;
  border-color: #c0cad5;
}

<hr
  className="c0"
/>
`;

exports[`Divider width prop sets width 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  margin-left: 0px;
  margin-right: 0px;
  width: 50%;
  border-color: #c0cad5;
}

<hr
  className="c0"
  width={0.5}
/>
`;
